--- a/src/i18n/messages/zh_CN.json
+++ b/src/i18n/messages/zh_CN.json
@@ -9,80 +9,80 @@
   "learning.outline.alert.start.short": "课程从 {timeRemaining} 开始于 {courseStartTime}。",
   "learning.outline.alert.end.long": "本课程将于 {courseEndDate} 在 {timeRemaining} 结束。",
   "learning.outline.alert.end.calendar": "不要忘记添加日历提醒！",
-  "instructorToolbar.pageBanner.courseHasNotStarted": "This learner does not yet have access to this course. The course starts on {date}.",
+  "instructorToolbar.pageBanner.courseHasNotStarted": "该学员还没有访问此课程的权限。课程开始于 {date}。",
   "learning.enrollment.alert": "您必须报读此课程才能查看课程内容。",
-  "learning.staff.enrollment.alert": "You are viewing this course as staff, and are not enrolled.",
-  "learning.enrollment.enrollNow.Inline": "Enroll now",
-  "learning.enrollment.enrollNow.Sentence": "Enroll now.",
-  "learning.enrollment.success": "You've successfully enrolled in this course!",
-  "account-activation.alert.button": "Continue to {siteName}",
-  "account-activation.alert.message": "We sent an email to {boldEmail} with a link to activate your account. Can’t find it? Check your spam folder or\n        {sendEmailTag}.",
-  "account-activation.resend.link": "resend the email",
-  "learning.logistration.alert": "To see course content, {signIn} or {register}.",
-  "account-activation.alert.title": "Activate your account so you can log back in",
-  "learn.sequence.entranceExamTextNotPassing": "To access course materials, you must score {entranceExamMinimumScorePct}% or higher on this exam. Your current score is {entranceExamCurrentScore}%.",
-  "learn.sequence.entranceExamTextPassed": "Your score is {entranceExamCurrentScore}%. You have passed the entrance exam.",
+  "learning.staff.enrollment.alert": "您正在以教职员工的身份查看此课程，但尚未注册。",
+  "learning.enrollment.enrollNow.Inline": "现在报名",
+  "learning.enrollment.enrollNow.Sentence": "现在报名。",
+  "learning.enrollment.success": "您已成功注册此课程！",
+  "account-activation.alert.button": "继续{siteName}",
+  "account-activation.alert.message": "我们向{boldEmail}发送了一封电子邮件，其中包含用于激活您帐户的链接。找不到吗？检查您的垃圾邮件文件夹或{sendEmailTag} 。",
+  "account-activation.resend.link": "重新发送电子邮件",
+  "learning.logistration.alert": "要查看课程内容，{signIn} 或 {register}。",
+  "account-activation.alert.title": "激活您的帐户，以便您可以重新登录。",
+  "learn.sequence.entranceExamTextNotPassing": "您在本测验的分数必须达到或高于 {required_score}% o才能访问课程。您的当前分数为{current_score}%。",
+  "learn.sequence.entranceExamTextPassed": "你的分数是 {entranceExamCurrentScore}%。你已经通过了入学考试。",
   "learning.dates.badge.completed": "已完成",
-  "learning.dates.badge.dueNext": "Due next",
-  "learning.dates.badge.pastDue": "Past due",
+  "learning.dates.badge.dueNext": "下一个到期",
+  "learning.dates.badge.pastDue": "逾期",
   "learning.dates.title": "重要日期",
   "learning.dates.badge.today": "今天",
-  "learning.dates.badge.unreleased": "Not yet released",
-  "learning.dates.badge.verifiedOnly": "Verified only",
+  "learning.dates.badge.unreleased": "尚未公布",
+  "learning.dates.badge.verifiedOnly": "仅验证",
   "learning.goals.unsubscribe.contact": "请联系技术支持",
-  "learning.goals.unsubscribe.description": "You will no longer receive email reminders about your goal for {courseTitle}.",
-  "learning.goals.unsubscribe.errorHeader": "Something went wrong",
+  "learning.goals.unsubscribe.description": "您将不会再收到有关 {courseTitle} 的电子邮件提醒。",
+  "learning.goals.unsubscribe.errorHeader": "出了些问题",
   "learning.goals.unsubscribe.goToDashboard": "去控制面板",
-  "learning.goals.unsubscribe.header": "You’ve unsubscribed from goal reminders",
-  "learning.goals.unsubscribe.loading": "Unsubscribing…",
-  "learning.goals.unsubscribe.errorDescription": "We were unable to unsubscribe you from goal reminder emails. Please try again later or {contactSupport} for help.",
-  "learning.outline.alert.cert.earnedNotAvailable": "This course ends on {courseEndDateFormatted}. Final grades and any earned certificates are\n            scheduled to be available after {certificateAvailableDate}.",
-  "cert.alert.earned.unavailable.header.v2": "Your grade and certificate status will be available soon.",
-  "cert.alert.earned.ready.header": "Congratulations! Your certificate is ready.",
-  "cert.alert.notPassing.header": "You are not yet eligible for a certificate",
-  "cert.alert.notPassing.button": "View grades",
-  "learning.outline.alert.end.short": "This course is ending {timeRemaining} at {courseEndTime}.",
-  "alert.enroll": " to access the full course.",
-  "learning.privateCourse.signInOrRegister": "{signIn} or {register} and then enroll in this course.",
-  "learning.outline.alert.scheduled-content.heading": "More content is coming soon!",
-  "learning.outline.alert.scheduled-content.body": "This course will have more content released at a future date. Look out for email updates or check back on this course for updates.",
-  "learning.outline.alert.scheduled-content.button": "View Course Schedule",
-  "learning.outline.dates.all": "View all course dates",
-  "learning.outline.goalButton.casual.text": "1 day a week",
-  "learning.outline.goalButton.screenReader.text": "Casual",
-  "learning.outline.certificateAlt": "Example Certificate",
-  "learning.outline.collapseAll": "Collapse all",
+  "learning.goals.unsubscribe.header": "您已取消目标提醒订阅",
+  "learning.goals.unsubscribe.loading": "取消订阅…",
+  "learning.goals.unsubscribe.errorDescription": "我们无法为您取消订阅目标提醒电子邮件。请稍后重试或{contactSupport}寻求帮助。",
+  "learning.outline.alert.cert.earnedNotAvailable": "本课程于{courseEndDateFormatted}结束。最终成绩和任何获得的证书计划在{certificateAvailableDate}之后提供。",
+  "cert.alert.earned.unavailable.header.v2": "您的成绩和证书状态将很快可用。",
+  "cert.alert.earned.ready.header": "恭喜！您的证书已准备就绪。",
+  "cert.alert.notPassing.header": "您还没有资格获得证书",
+  "cert.alert.notPassing.button": "查看成绩",
+  "learning.outline.alert.end.short": "本课程将于 {timeRemaining} 在 {courseEndTime} 结束。",
+  "alert.enroll": "访问完整课程。",
+  "learning.privateCourse.signInOrRegister": "{signIn} 或 {register} 然后注册此课程。",
+  "learning.outline.alert.scheduled-content.heading": "更多内容即将上线，敬请期待。",
+  "learning.outline.alert.scheduled-content.body": "本课程将在以后发布更多内容。查看电子邮件更新或稍后查看此课程以获取更新。",
+  "learning.outline.alert.scheduled-content.button": "查看课程安排",
+  "learning.outline.dates.all": "浏览所有课程日期",
+  "learning.outline.goalButton.casual.text": "每周 1 天",
+  "learning.outline.goalButton.screenReader.text": "随意的",
+  "learning.outline.certificateAlt": "示例证书",
+  "learning.outline.collapseAll": "折叠全部",
   "learning.outline.completedAssignment": "已完成",
-  "learning.outline.completedSection": "Completed section",
+  "learning.outline.completedSection": "完成章节",
   "learning.outline.dates": "重要日期",
-  "learning.outline.editGoal": "Edit goal",
-  "learning.outline.expandAll": "Expand all",
-  "learning.outline.goal": "Goal",
-  "learning.outline.goalReminderDetail": "If we notice you’re not quite at your goal, we’ll send you an email reminder.",
+  "learning.outline.editGoal": "编辑目标",
+  "learning.outline.expandAll": "展开全部",
+  "learning.outline.goal": "目标",
+  "learning.outline.goalReminderDetail": "如果我们注意到您没有完全达到目标，我们会向您发送一封电子邮件提醒。",
   "learning.outline.goalUnsure": "再想想",
   "learning.outline.handouts": "课程讲义",
   "learning.outline.incompleteAssignment": "未完成",
-  "learning.outline.incompleteSection": "Incomplete section",
-  "learning.outline.goalButton.intense.text": "5 days a week",
-  "learning.outline.goalButton.intense.title": "Intense",
+  "learning.outline.incompleteSection": "不完整的部分",
+  "learning.outline.goalButton.intense.text": "每周 5 天",
+  "learning.outline.goalButton.intense.title": "激烈的",
   "learning.outline.learnMore": "了解更多",
   "learning.outline.altText.openSection": "打开",
-  "learning.proctoringPanel.header": "This course contains proctored exams",
-  "learning.outline.goalButton.regular.text": "3 days a week",
-  "learning.outline.goalButton.regular.title": "Regular",
-  "learning.outline.resumeBlurb": "Pick up where you left off",
-  "learning.outline.resume": "Resume course",
-  "learning.outline.setGoal": "To start, set a course goal by selecting the option below that best describes your learning plan.",
-  "learning.outline.setGoalReminder": "Set a goal reminder",
-  "learning.outline.goalButton.casual.title": "Set a learning goal style.",
-  "learning.outline.setWeeklyGoal": "Set a weekly learning goal",
-  "learning.outline.setWeeklyGoalDetail": "Setting a goal motivates you to finish the course. You can always change it later.",
-  "learning.outline.start": "Start course",
-  "learning.outline.startBlurb": "Begin your course today",
+  "learning.proctoringPanel.header": "本课程包含监考考试",
+  "learning.outline.goalButton.regular.text": "每周 3 天",
+  "learning.outline.goalButton.regular.title": "常规的",
+  "learning.outline.resumeBlurb": "从你离开的地方继续",
+  "learning.outline.resume": "继续课程",
+  "learning.outline.setGoal": "首先，通过选择下面最能描述您的学习计划的选项来设定课程目标。",
+  "learning.outline.setGoalReminder": "设置目标提醒",
+  "learning.outline.goalButton.casual.title": "设定学习目标。",
+  "learning.outline.setWeeklyGoal": "设定每周学习目标",
+  "learning.outline.setWeeklyGoalDetail": "设定目标会激励您完成课程。您以后可以随时更改它。",
+  "learning.outline.start": "开始课程",
+  "learning.outline.startBlurb": "今天开始你的课程",
   "learning.outline.tools": "课程工具",
-  "learning.outline.upgradeButton": "Upgrade ({symbol}{price})",
+  "learning.outline.upgradeButton": "升级 ({symbol}{price})",
   "learning.outline.upgradeTitle": "考取认证证书",
-  "learning.outline.welcomeMessage": "Welcome Message",
+  "learning.outline.welcomeMessage": "欢迎消息",
   "learning.outline.welcomeMessageShowMoreButton": "显示更多",
   "learning.outline.welcomeMessageShowLessButton": "查看收起",
   "learning.outline.goalWelcome": "欢迎来到",
@@ -92,49 +92,49 @@
   "learning.proctoringPanel.status.verified": "已经过身份认证的",
   "learning.proctoringPanel.status.rejected": "拒绝",
   "learning.proctoringPanel.status.error": "错误",
-  "learning.proctoringPanel.status.otherCourseApproved": "Approved in Another Course",
-  "learning.proctoringPanel.status.expiringSoon": "Expiring Soon",
-  "learning.proctoringPanel.status.expired": "Expired",
-  "learning.proctoringPanel.status": "Current Onboarding Status:",
-  "learning.proctoringPanel.message.notStarted": "You have not started your onboarding exam.",
-  "learning.proctoringPanel.message.started": "You have started your onboarding exam.",
-  "learning.proctoringPanel.message.submitted": "You have submitted your onboarding exam.",
-  "learning.proctoringPanel.message.verified": "Your onboarding exam has been approved in this course.",
-  "learning.proctoringPanel.message.rejected": "Your onboarding exam has been rejected. Please retry onboarding.",
-  "learning.proctoringPanel.message.error": "An error has occurred during your onboarding exam. Please retry onboarding.",
-  "learning.proctoringPanel.message.otherCourseApproved": "Your onboarding exam has been approved in another course.",
-  "learning.proctoringPanel.detail.otherCourseApproved": "If your device has changed, we recommend that you complete this course's onboarding exam in order to ensure that your setup still meets the requirements for proctoring.",
-  "learning.proctoringPanel.message.expiringSoon": "Your onboarding profile has been approved. However, your onboarding status is expiring soon. Please complete onboarding again to ensure that you will be able to continue taking proctored exams.",
-  "learning.proctoringPanel.message.expired": "Your onboarding status has expired. Please complete onboarding again to continue taking proctored exams.",
-  "learning.proctoringPanel.generalInfo": "You must complete the onboarding process prior to taking any proctored exam. ",
-  "learning.proctoringPanel.generalInfoSubmitted": "Your submitted profile is in review.",
-  "learning.proctoringPanel.generalTime": "Onboarding profile review can take 2+ business days.",
-  "learning.proctoringPanel.onboardingButton": "Complete Onboarding",
-  "learning.proctoringPanel.onboardingPracticeButton": "View Onboarding Exam",
-  "learning.proctoringPanel.onboardingButtonNotOpen": "Onboarding Opens: {releaseDate}",
-  "learning.proctoringPanel.reviewRequirementsButton": "Review instructions and system requirements",
-  "learning.proctoringPanel.onboardingButtonPastDue": "Onboarding Past Due",
-  "learning.outline.sequence-due-date-set": "{description} due {assignmentDue}",
+  "learning.proctoringPanel.status.otherCourseApproved": "在另一门课程中获得批准",
+  "learning.proctoringPanel.status.expiringSoon": "即将过期",
+  "learning.proctoringPanel.status.expired": "已到期",
+  "learning.proctoringPanel.status": "当前入学状态：",
+  "learning.proctoringPanel.message.notStarted": "您还没有开始入学考试。",
+  "learning.proctoringPanel.message.started": "您已经开始入学考试。",
+  "learning.proctoringPanel.message.submitted": "您已提交您的入学考试。",
+  "learning.proctoringPanel.message.verified": "您的入学考试已在此课程中获得批准。",
+  "learning.proctoringPanel.message.rejected": "您的入学考试成绩已被拒绝。请重试入学。",
+  "learning.proctoringPanel.message.error": "您的入学考试期间出现错误。请重试入学。",
+  "learning.proctoringPanel.message.otherCourseApproved": "您的入学考试已在另一门课程中获得批准。",
+  "learning.proctoringPanel.detail.otherCourseApproved": "如果您的设备已更改，我们建议您完成本课程的入学考试，以确保您的设置仍然满足监考要求。",
+  "learning.proctoringPanel.message.expiringSoon": "您的入学资料已获批准。但是，您的入学资格即将到期。请再次完成入学手续，以确保您能够继续参加监考考试。",
+  "learning.proctoringPanel.message.expired": "您的入学状态已过期。请再次完成入学手续以继续参加监考考试。",
+  "learning.proctoringPanel.generalInfo": "您必须在参加任何监考考试之前完成入职流程。",
+  "learning.proctoringPanel.generalInfoSubmitted": "您提交的个人资料正在审核中。",
+  "learning.proctoringPanel.generalTime": "入学档案审核可能需要 2 个工作日以上的时间。",
+  "learning.proctoringPanel.onboardingButton": "完成入学",
+  "learning.proctoringPanel.onboardingPracticeButton": "查看入学考试",
+  "learning.proctoringPanel.onboardingButtonNotOpen": "入学开放：{releaseDate}",
+  "learning.proctoringPanel.reviewRequirementsButton": "查看说明和系统要求",
+  "learning.proctoringPanel.onboardingButtonPastDue": "入学逾期",
+  "learning.outline.sequence-due-date-set": "{description} 于 {assignmentDue}到期",
   "learning.outline.sequence-due-date-not-set": "{description}",
-  "progress.certificateStatus.unverifiedBody": "In order to generate a certificate, you must complete ID verification. {idVerificationSupportLink}.",
-  "progress.certificateStatus.downloadableBody": "Showcase your accomplishment on LinkedIn or your resumé today. You can download your certificate now and access it any time from your Dashboard and Profile.",
-  "courseCelebration.certificateBody.notAvailable.endDate": "Final grades and any earned certificates are scheduled to be available after {endDate}.",
-  "progress.certificateStatus.notPassingHeader": "Certificate status",
-  "progress.certificateStatus.notPassingBody": "In order to qualify for a certificate, you must have a passing grade.",
-  "progress.certificateStatus.inProgressHeader": "More content is coming soon!",
-  "progress.certificateStatus.inProgressBody": "It looks like there is more content in this course that will be released in the future. Look out for email updates or check back on your course for when this content will be available.",
-  "progress.certificateStatus.requestableHeader": "Certificate status",
-  "progress.certificateStatus.requestableBody": "Congratulations, you qualified for a certificate! In order to access your certificate, request it below.",
-  "progress.certificateStatus.requestableButton": "Request certificate",
-  "progress.certificateStatus.unverifiedHeader": "Certificate status",
-  "progress.certificateStatus.unverifiedButton": "Verify ID",
-  "progress.certificateStatus.courseCelebration.verificationPending": "Your ID verification is pending and your certificate will be available once approved.",
-  "progress.certificateStatus.downloadableHeader": "Your certificate is available!",
-  "progress.certificateStatus.viewableButton": "View my certificate",
-  "progress.certificateStatus.notAvailableHeader": "Certificate status",
-  "progress.certificateBody.notAvailable.endDate": "Final grades and any earned certificates are scheduled to be available after {endDate}.",
+  "progress.certificateStatus.unverifiedBody": "为了生成证书，您必须完成身份验证。 {idVerificationSupportLink}。",
+  "progress.certificateStatus.downloadableBody": "今天就在您的领英或者简历上展示您的成就。您现在可以下载您的证书。",
+  "courseCelebration.certificateBody.notAvailable.endDate": "最终成绩和所有获得的证书计划在 {endDate} 之后提供。",
+  "progress.certificateStatus.notPassingHeader": "证书状态",
+  "progress.certificateStatus.notPassingBody": "为了有资格获得证书，您必须要达到及格线。",
+  "progress.certificateStatus.inProgressHeader": "更多内容即将推出！",
+  "progress.certificateStatus.inProgressBody": "看来这门课程还有更多的内容会在以后发布。查看电子邮件更新或查看您的课程以了解此内容何时可用。",
+  "progress.certificateStatus.requestableHeader": "证书状态",
+  "progress.certificateStatus.requestableBody": "恭喜您获得证书资格！要访问您的证书，请在下方申请。",
+  "progress.certificateStatus.requestableButton": "申请证书",
+  "progress.certificateStatus.unverifiedHeader": "证书状态",
+  "progress.certificateStatus.unverifiedButton": "验证身份",
+  "progress.certificateStatus.courseCelebration.verificationPending": "您的身份验证正在等待处理，您的证书将在获得批准后可用。",
+  "progress.certificateStatus.downloadableHeader": "您的证书可用！",
+  "progress.certificateStatus.viewableButton": "查看我的证书",
+  "progress.certificateStatus.notAvailableHeader": "证书状态",
+  "progress.certificateBody.notAvailable.endDate": "最终成绩和所有获得的证书计划在 {endDate} 之后提供。",
   "progress.certificateStatus.upgradeHeader": "获取证书",
-  "progress.certificateStatus.upgradeBody": "You are in an audit track and do not qualify for a certificate. In order to work towards a certificate, upgrade your course today.",
+  "progress.certificateStatus.upgradeBody": "您在旁听课程中，不符合获得证书的条件。为了获得证书，请立即升级您的课程。",
   "progress.certificateStatus.upgradeButton": "马上升级",
   "progress.certificateStatus.unverifiedHomeHeader.v2": "Verify your identity to qualify for a certificate.",
   "progress.certificateStatus.unverifiedHomeButton": "Verify my ID",
@@ -368,7 +368,7 @@
   "learn.sequence.share.quote": "Here's a fun clip from a class I'm taking on @edXonline.\n",
   "discussions.sidebar.title": "讨论",
   "discussions.sidebar.open.button": "Show discussions tray",
-  "learn.redirect.interstitial.message": "Redirecting...",
+  "learn.redirect.interstitial.message": "重定向...",
   "learn.loading.error": "错误: {error}",
   "learning.celebration.emailBody": "What are you spending your time learning?",
   "learning.social.shareEmail": "Share your progress via email.",
