--- a/src/i18n/messages/zh_CN.json
+++ b/src/i18n/messages/zh_CN.json
@@ -377,76 +377,76 @@
   "learning.logistration.register": "注册",
   "learning.logistration.login": "登录",
   "general.signIn.sentenceCase": "登录",
-  "learn.course.tabs.navigation.overflow.menu": "More...",
-  "learning.offer.screenReaderPrices": "Original price: {originalPrice}, discount price: {discountedPrice}",
-  "learning.upgradeButton.screenReaderInlinePrices": "Original price: {originalPrice}",
-  "learning.upgradeButton.buttonText": "Upgrade for {pricing}",
-  "learning.upgradeNowButton.buttonText": "Upgrade now for {pricing}",
-  "learning.generic.upgradeNotification.expirationAccessLoss.progress": "including any progress",
-  "learning.generic.upgradeNotification.expirationVerifiedCert.benefits": "benefits of upgrading",
-  "learning.generic.upgradeNotification.expirationAccessLoss": "You will lose all access to this course, {includingAnyProgress}, on {date}.",
-  "learning.generic.upgradeNotification.expirationVerifiedCert": "Upgrading your course enables you to pursue a verified certificate and unlocks numerous features. Learn more about the {benefitsOfUpgrading}.",
-  "learning.generic.upgradeNotification.pastExpiration.content": "The upgrade deadline for this course passed. To upgrade, enroll in the next available session.",
-  "learning.generic.upgradeNotification.expirationDays": "{dayCount, number} {dayCount, plural, \n          one {day}\n          other {days}} left",
-  "learning.generic.upgradeNotification.expirationHours": "{hourCount, number} {hourCount, plural,\n          one {hour}\n          other {hours}} left",
-  "learning.generic.upgradeNotification.expirationMinutes": "Less than 1 hour left",
-  "learning.generic.upgradeNotification.expiration": "Course access will expire {date}",
-  "learning.generic.upgradeNotification.pastExpiration.banner": "Upgrade deadline passed on {date}",
-  "learning.generic.upgradeNotification.firstTimeLearnerDiscount": "{percentage}% First-Time Learner Discount",
-  "learning.generic.upgradeNotification.accessExpiration": "Upgrade your course today",
-  "learning.generic.upgradeNotification.accessExpirationUrgent": "Course Access Expiration",
-  "learning.generic.upgradeNotification.accessExpirationPast": "Course Access Expiration",
+  "learn.course.tabs.navigation.overflow.menu": "更多的...",
+  "learning.offer.screenReaderPrices": "原价：{originalPrice}，打折价格：{discountedPrice}",
+  "learning.upgradeButton.screenReaderInlinePrices": "原价：{originalPrice}",
+  "learning.upgradeButton.buttonText": "{pricing} 可升级",
+  "learning.upgradeNowButton.buttonText": " {pricing}立即升级",
+  "learning.generic.upgradeNotification.expirationAccessLoss.progress": "包括任何进展",
+  "learning.generic.upgradeNotification.expirationVerifiedCert.benefits": "升级的好处",
+  "learning.generic.upgradeNotification.expirationAccessLoss": "您将在 {date} 失去对这门课程 {includingAnyProgress} 的所有访问权限。",
+  "learning.generic.upgradeNotification.expirationVerifiedCert": "升级您的课程使您能够获得经过验证的证书并解锁众多功能。了解有关 {benefitsOfUpgrading} 的更多信息。",
+  "learning.generic.upgradeNotification.pastExpiration.content": "该课程的升级截止日期已过。要升级，请注册下一个日期。",
+  "learning.generic.upgradeNotification.expirationDays": "{dayCount, number} {dayCount, 复数, 还剩 {day} other {days}}",
+  "learning.generic.upgradeNotification.expirationHours": "{hourCount, number} {hourCount, 复数, 还剩 1 {hour} 其它 {hours}}",
+  "learning.generic.upgradeNotification.expirationMinutes": "还剩不到 1 小时",
+  "learning.generic.upgradeNotification.expiration": "课程访问权限将过期 {date}",
+  "learning.generic.upgradeNotification.pastExpiration.banner": "升级截止日期已过 {date}",
+  "learning.generic.upgradeNotification.firstTimeLearnerDiscount": "{percentage}% 首次学员折扣",
+  "learning.generic.upgradeNotification.accessExpiration": "立即升级您的课程",
+  "learning.generic.upgradeNotification.accessExpirationUrgent": "课程访问过期",
+  "learning.generic.upgradeNotification.accessExpirationPast": "课程访问过期",
   "learning.generic.upgradeNotification.pursueAverifiedCertificate": "获取认证证书",
-  "learning.generic.upgradeNotification.code": "Use code {code} at checkout",
-  "learning.generic.upsell.verifiedCertBullet.verifiedCert": "verified certificate",
-  "learning.generic.upsell.verifiedCertBullet": "Earn a {verifiedCertLink} of completion to showcase on your resumé",
-  "learning.generic.upsell.unlockGradedBullet.gradedAssignments": "graded assignments",
-  "learning.generic.upsell.unlockGradedBullet": "Unlock your access to all course activities, including {gradedAssignmentsInBoldText}",
-  "learning.generic.upsell.fullAccessBullet.fullAccess": "Full access",
-  "learning.generic.upsell.fullAccessBullet": "{fullAccessInBoldText} to course content and materials, even after the course ends",
-  "learning.generic.upsell.supportMissionBullet.mission": "mission",
-  "learning.generic.upsell.supportMissionBullet": "Support our {missionInBoldText} at {siteName}",
-  "masquerade-widget.userName.error.generic": "An error has occurred; please try again.",
-  "masquerade-widget.userName.input.placeholder": "Username or email",
-  "masquerade-widget.userName.input.label": "Masquerade as this user",
-  "tours.abandonTour.launchTourCheckpoint.body": "Feeling lost? Launch the tour any time for some quick tips to get the most out of the experience.",
-  "tours.sequenceNavigationCheckpoint.body": "The top bar within your course allows you to easily jump to different sections and shows you what’s coming up.",
-  "tours.existingUserTour.launchTourCheckpoint.body": "We’ve recently added a few new features to the course experience. Want some help looking around? Take a tour to learn more.",
+  "learning.generic.upgradeNotification.code": "在付款时使用代码 {code}",
+  "learning.generic.upsell.verifiedCertBullet.verifiedCert": "验证证书",
+  "learning.generic.upsell.verifiedCertBullet": "完成 {verifiedCertLink} 以在您的简历中展示",
+  "learning.generic.upsell.unlockGradedBullet.gradedAssignments": "评分作业",
+  "learning.generic.upsell.unlockGradedBullet": "解锁您对所有课程活动的访问权限，包括 {gradedAssignmentsInBoldText}",
+  "learning.generic.upsell.fullAccessBullet.fullAccess": "完全访问权限",
+  "learning.generic.upsell.fullAccessBullet": "{fullAccessInBoldText} 课程内容和材料，即使在课程结束后",
+  "learning.generic.upsell.supportMissionBullet.mission": "使命",
+  "learning.generic.upsell.supportMissionBullet": "在 {siteName} 支持我们的 {missionInBoldText}",
+  "masquerade-widget.userName.error.generic": "发生了错误;请再试一次。",
+  "masquerade-widget.userName.input.placeholder": "用户名或电子邮件",
+  "masquerade-widget.userName.input.label": "使用这个用户",
+  "tours.abandonTour.launchTourCheckpoint.body": "有问题么？随时启动浏览以获取一些快速提示，以充分体验。",
+  "tours.sequenceNavigationCheckpoint.body": "课程中的顶部栏允许您轻松跳转到不同的部分并向您显示其他课程。",
+  "tours.existingUserTour.launchTourCheckpoint.body": "我们最近在课程体验中添加了一些新功能。需要帮助么？可以参照导览以了解更多信息。",
   "tours.button.dismiss": "忽略",
   "tours.button.next": "下一节",
-  "tours.button.okay": "Okay",
-  "tours.button.beginTour": "Begin tour",
-  "tours.button.launchTour": "Launch tour",
-  "tours.newUserModal.body": "Let’s take a quick tour of {siteName} so you can get the most out of your course.",
-  "tours.newUserModal.title.welcome": "Welcome to your",
-  "tours.button.skipForNow": "Skip for now",
-  "tours.datesCheckpoint.body": "Important dates can help you stay on track.",
-  "tours.datesCheckpoint.title": "Keep on top of key dates",
-  "tours.outlineCheckpoint.body": "You can explore sections of the course using the outline below.",
-  "tours.outlineCheckpoint.title": "Take the course!",
-  "tours.tabNavigationCheckpoint.body": "These tabs can be used to access other course materials, such as your progress, syllabus, etc.",
-  "tours.tabNavigationCheckpoint.title": "Additional course resources",
-  "tours.upgradeCheckpoint.body": "Work towards a certificate and gain full access to course materials. Upgrade now!",
-  "tours.upgradeCheckpoint.title": "Unlock your course",
-  "tours.weeklyGoalsCheckpoint.body": "Setting a goal makes you more likely to complete your course.",
-  "tours.weeklyGoalsCheckpoint.title": "Set a course goal",
+  "tours.button.okay": "好的",
+  "tours.button.beginTour": "开始浏览",
+  "tours.button.launchTour": "进行导览演示",
+  "tours.newUserModal.body": "让我们快速浏览一下 {siteName}，这样您就可以更充分体验您的课程。",
+  "tours.newUserModal.title.welcome": "欢迎来到您的",
+  "tours.button.skipForNow": "暂时跳过",
+  "tours.datesCheckpoint.body": "重要的日期可以帮助您保持学习进度。",
+  "tours.datesCheckpoint.title": "掌握关键日期",
+  "tours.outlineCheckpoint.body": "您可以使用下面的大纲探索课程的各个部分。",
+  "tours.outlineCheckpoint.title": "上课！",
+  "tours.tabNavigationCheckpoint.body": "这些选项卡可用于访问其他课程材料，例如您的进度、教学大纲等。",
+  "tours.tabNavigationCheckpoint.title": "额外的课程资源",
+  "tours.upgradeCheckpoint.body": "努力获得证书并获得对课程材料的完全访问权限。现在升级！",
+  "tours.upgradeCheckpoint.title": "解锁你的课程",
+  "tours.weeklyGoalsCheckpoint.body": "设定目标可以让您更有可能完成课程。",
+  "tours.weeklyGoalsCheckpoint.title": "设定课程目标",
   "tours.newUserModal.title": "{welcome} {siteName} course!",
   "learning.effortEstimation.combinedEstimate": "{minutes} + {activities}",
-  "learning.effortEstimation.activities": "{activityCount, plural, one {# activity} other {# activities}}",
-  "learning.effortEstimation.minutesAbbreviated": "{minuteCount, plural, one {# min} other {# min}}",
-  "learning.effortEstimation.minutesFull": "{minuteCount, plural, one {# minute} other {# minutes}}",
+  "learning.effortEstimation.activities": "{activityCount, plural, other { 活动}}",
+  "learning.effortEstimation.minutesAbbreviated": "{minuteCount, plural, other { 最小}}",
+  "learning.effortEstimation.minutesFull": "{minuteCount, plural, other { 分钟}}",
   "learning.streakCelebration.congratulations": "恭喜！",
-  "learning.streakCelebration.body": "Keep it up, you’re on a roll!",
-  "learning.streakCelebration.button": "Keep it up",
-  "learning.streakCelebration.buttonSrOnly": "Close modal and continue",
-  "learning.streakCelebration.buttonAA759": "Continue with course",
-  "learning.streakCelebration.header": "day streak",
-  "learning.streakCelebration.factoidABoldedSection": "are 20x more likely to pass their course",
-  "learning.streakCelebration.factoidBBoldedSection": "complete 5x as much course content on average",
-  "learning.streakCelebration.streakDiscountMessage": "You’ve unlocked a {percent}% off discount when you upgrade this course for a limited time only.",
-  "learning.streakcelebration.factoida": "Users who learn {streak_length} days in a row {bolded_section} than those who don’t.",
-  "learning.streakcelebration.factoidb": "Users who learn {streak_length} days in a row {bolded_section} vs. those who don’t.",
-  "learning.streakCelebration.streakCelebrationCouponEndDateMessage": "Ends {date}.",
-  "learning.loading.failure": "There was an error loading this course.",
-  "learning.loading": "Loading course page…"
+  "learning.streakCelebration.body": "坚持下去，你就成功了！",
+  "learning.streakCelebration.button": "继续努力",
+  "learning.streakCelebration.buttonSrOnly": "关闭模态并继续",
+  "learning.streakCelebration.buttonAA759": "继续课程",
+  "learning.streakCelebration.header": "连续",
+  "learning.streakCelebration.factoidABoldedSection": "通过课程的可能性提高 20 倍",
+  "learning.streakCelebration.factoidBBoldedSection": "平均完成 5 倍的课程内容",
+  "learning.streakCelebration.streakDiscountMessage": "当您在限定的时间内升级此课程时，您可获得{percent}%off折扣。",
+  "learning.streakcelebration.factoida": "连续学习 {streak_length} 天 {bolded_section} 的用户比不学习的学员要多。",
+  "learning.streakcelebration.factoidb": "连续学习 {streak_length} 天 {bolded_section} 的用户与不学习的学员对比。",
+  "learning.streakCelebration.streakCelebrationCouponEndDateMessage": "结束 {date}。",
+  "learning.loading.failure": "加载此课程时出错。",
+  "learning.loading": "正在加载课程页面…"
 }
